test/valid_codesnipsets/modulo.go
package main

import "fmt"

func main() {
    var f int =  5 % 3
}