test/type_errors/typo_bool.go
package main 

import "fmt"

func main() {
    var b = tru
}